--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.729 2012/10/09 01:20:46 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.730 2012/10/09 02:55:25 floppym Exp $
+
+*chromium-23.0.1271.22 (09 Oct 2012)
+
+  09 Oct 2012; Mike Gilbert <floppym@gentoo.org> +chromium-23.0.1271.22.ebuild,
+  -chromium-23.0.1271.10-r1.ebuild, -chromium-23.0.1271.10.ebuild:
+  Beta channel bump.
 
 *chromium-22.0.1229.92 (09 Oct 2012)
 
