--- a/net-analyzer/arpoison/ChangeLog
+++ b/net-analyzer/arpoison/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/arpoison
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/arpoison/ChangeLog,v 1.10 2012/10/09 07:52:21 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/arpoison/ChangeLog,v 1.11 2012/10/09 07:57:16 pinkbyte Exp $
+
+  09 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> +arpoison-0.6.ebuild:
+  Bring old revision back, cause it's the one stable on ppc and x86
 
   09 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> -arpoison-0.6.ebuild:
   Drop old revision
