--- a/net-analyzer/bigeye/ChangeLog
+++ b/net-analyzer/bigeye/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/bigeye
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bigeye/ChangeLog,v 1.18 2012/03/21 15:24:40 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bigeye/ChangeLog,v 1.19 2012/10/09 08:22:52 pinkbyte Exp $
+
+  09 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> bigeye-0.3-r3.ebuild:
+  Replace direct invocation of 'cp' command with doins
 
   21 Mar 2012; Thomas Kahle <tomka@gentoo.org> bigeye-0.3-r3.ebuild:
   marked x86 per bug 342309
