--- a/net-analyzer/bigeye/ChangeLog
+++ b/net-analyzer/bigeye/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/bigeye
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bigeye/ChangeLog,v 1.19 2012/10/09 08:22:52 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bigeye/ChangeLog,v 1.20 2012/10/09 08:23:55 pinkbyte Exp $
+
+  09 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> bigeye-0.3-r3.ebuild:
+  QA: add RDEPEND explicitly
 
   09 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> bigeye-0.3-r3.ebuild:
   Replace direct invocation of 'cp' command with doins
