--- a/app-crypt/shishi/ChangeLog
+++ b/app-crypt/shishi/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for app-crypt/shishi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/shishi/ChangeLog,v 1.5 2012/10/09 08:50:50 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/shishi/ChangeLog,v 1.6 2012/10/09 08:54:31 eras Exp $
 
 *shishi-1.0.1-r1 (09 Oct 2012)
 
-  09 Oct 2012; Eray Aslan <eraya@gentoo.org> +files/shishi_gets.patch,
+  09 Oct 2012; Eray Aslan <eras@gentoo.org> +files/shishi_gets.patch,
   +shishi-1.0.1-r1.ebuild:
   Fix building with glibc-2.16.0 - bug #437660
 
