--- a/net-analyzer/upnpscan/ChangeLog
+++ b/net-analyzer/upnpscan/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/upnpscan
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/upnpscan/ChangeLog,v 1.12 2011/11/22 17:59:03 pacho Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/upnpscan/ChangeLog,v 1.13 2012/10/09 10:05:00 pinkbyte Exp $
+
+*upnpscan-0.4-r3 (09 Oct 2012)
+
+  09 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> +upnpscan-0.4-r3.ebuild:
+  Revision bump: EAPI 4, using autotools-utils eclass, remove unneeded
+  src_install function
 
   22 Nov 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer due retirement, bug #82110
