--- a/net-analyzer/ftester/ChangeLog
+++ b/net-analyzer/ftester/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/ftester
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ftester/ChangeLog,v 1.18 2012/10/09 10:54:58 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ftester/ChangeLog,v 1.19 2012/10/09 10:56:11 pinkbyte Exp $
+
+  09 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> ftester-1.0.ebuild:
+  Fix description
 
   09 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> ftester-1.0.ebuild:
   QA: add missing RDEPEND, fix dependencies
