--- a/dev-lang/swi-prolog/ChangeLog
+++ b/dev-lang/swi-prolog/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.352 2012/10/04 21:44:25 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.353 2012/10/09 12:42:06 keri Exp $
+
+*swi-prolog-6.3.2 (09 Oct 2012)
+
+  09 Oct 2012; <keri@gentoo.org> +swi-prolog-6.3.2.ebuild:
+  Bump -6.3 development version
 
   04 Oct 2012; Brent Baude <ranger@gentoo.org> swi-prolog-6.2.0.ebuild:
   Marking swi-prolog-6.2.0 ppc for bug 437094
