--- a/dev-lang/swi-prolog/ChangeLog
+++ b/dev-lang/swi-prolog/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.353 2012/10/09 12:42:06 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.354 2012/10/09 12:44:28 keri Exp $
+
+  09 Oct 2012; <keri@gentoo.org> -swi-prolog-6.1.11.ebuild,
+  -swi-prolog-6.1.12.ebuild, -swi-prolog-6.1.13.ebuild:
+  Remove old -6.1 development versions
 
 *swi-prolog-6.3.2 (09 Oct 2012)
 
