--- a/app-i18n/multiskkserv/ChangeLog
+++ b/app-i18n/multiskkserv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/multiskkserv
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/multiskkserv/ChangeLog,v 1.18 2012/09/23 08:33:55 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/multiskkserv/ChangeLog,v 1.19 2012/10/09 12:45:15 naota Exp $
+
+  09 Oct 2012;  <naota@gentoo.org> multiskkserv-20100128.ebuild:
+  Add app-i18n/nkf dependency for test. #428872
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   multiskkserv-20100128.ebuild:
