--- a/dev-lang/v8/ChangeLog
+++ b/dev-lang/v8/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/v8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.244 2012/10/09 01:20:41 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.245 2012/10/09 13:41:45 phajdan.jr Exp $
+
+  09 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-3.12.19.15.ebuild:
+  x86 stable wrt security bug #437664
 
 *v8-3.12.19.15 (09 Oct 2012)
 
