--- a/dev-perl/Coro/ChangeLog
+++ b/dev-perl/Coro/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Coro
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Coro/ChangeLog,v 1.11 2012/10/07 16:49:14 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Coro/ChangeLog,v 1.12 2012/10/09 17:53:57 tove Exp $
+
+*Coro-6.100.0 (09 Oct 2012)
+
+  09 Oct 2012; Torsten Veller <tove@gentoo.org> +Coro-6.100.0.ebuild:
+  Version bump
 
 *Coro-6.90.0 (07 Oct 2012)
 
