--- a/sci-physics/espresso++/ChangeLog
+++ b/sci-physics/espresso++/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-physics/espresso++
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/espresso++/ChangeLog,v 1.1 2012/10/09 13:01:30 ottxor Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/espresso++/ChangeLog,v 1.2 2012/10/09 18:10:56 xarthisius Exp $
+
+  09 Oct 2012; Kacper Kowalik <xarthisius@gentoo.org> espresso++-1.3.1.ebuild:
+  Fix SRC_URI, previous address had SSL cert problems
 
 *espresso++-1.3.1 (09 Oct 2012)
 
