--- a/net-wireless/kismet-ubertooth/ChangeLog
+++ b/net-wireless/kismet-ubertooth/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/kismet-ubertooth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/kismet-ubertooth/ChangeLog,v 1.8 2012/08/30 23:18:08 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/kismet-ubertooth/ChangeLog,v 1.9 2012/10/09 18:49:21 zerochaos Exp $
+
+*kismet-ubertooth-2012.10.1 (09 Oct 2012)
+
+  09 Oct 2012; Rick Farina <zerochaos@gentoo.org>
+  +kismet-ubertooth-2012.10.1.ebuild, kismet-ubertooth-9999.ebuild:
+  bump, had to drop arm keywords for now but not forever
 
 *kismet-ubertooth-0.0_p534-r1 (30 Aug 2012)
 
