--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.731 2012/10/09 13:43:30 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.732 2012/10/09 18:53:57 ago Exp $
+
+  09 Oct 2012; Agostino Sarubbo <ago@gentoo.org> chromium-22.0.1229.92.ebuild:
+  Stable for amd64, wrt bug #437664
 
   09 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   chromium-22.0.1229.92.ebuild:
