--- a/net-analyzer/bigeye/ChangeLog
+++ b/net-analyzer/bigeye/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/bigeye
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bigeye/ChangeLog,v 1.21 2012/10/09 08:25:01 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/bigeye/ChangeLog,v 1.22 2012/10/09 18:54:12 ago Exp $
+
+  09 Oct 2012; Agostino Sarubbo <ago@gentoo.org> bigeye-0.3-r3.ebuild:
+  Stable for amd64, wrt bug #342309
 
   09 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> -bigeye-0.3-r1.ebuild:
   Drop old revision
