--- a/net-misc/gwhois/ChangeLog
+++ b/net-misc/gwhois/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/gwhois
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gwhois/ChangeLog,v 1.54 2012/07/09 18:19:06 wschlich Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gwhois/ChangeLog,v 1.55 2012/10/09 18:55:15 ago Exp $
+
+  09 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gwhois-20120626.ebuild:
+  Stable for amd64, wrt bug #433335
 
 *gwhois-20120626 (09 Jul 2012)
 
