--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.118 2012/10/09 20:18:30 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.119 2012/10/09 20:19:31 cardoe Exp $
+
+  09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> -qemu-1.1.1.ebuild:
+  Remove ebuild that was never keyworded
 
 *qemu-1.1.1-r1 (09 Oct 2012)
 
