--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.119 2012/10/09 20:19:31 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.120 2012/10/09 20:25:13 cardoe Exp $
+
+  09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> qemu-1.1.1-r1.ebuild:
+  This was stable but repoman didn't want to let me keep it stable after the
+  move so remarking stable.
 
   09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> -qemu-1.1.1.ebuild:
   Remove ebuild that was never keyworded
