--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.217 2012/10/09 20:28:03 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.218 2012/10/09 20:31:55 cardoe Exp $
+
+  09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.10.1.ebuild:
+  One more version to remove.
 
   09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.9.11.4.ebuild,
   -libvirt-0.9.11.5.ebuild, -libvirt-0.9.12.ebuild, -libvirt-0.9.12-r1.ebuild:
