--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.218 2012/10/09 20:31:55 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.219 2012/10/09 20:35:26 cardoe Exp $
+
+  09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.9.13-r1.ebuild,
+  libvirt-0.10.2.ebuild, libvirt-0.10.2-r1.ebuild:
+  Reflect the app-emulation/qemu-kvm -> app-emulation/qemu move
 
   09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.10.1.ebuild:
   One more version to remove.
