--- a/app-emulation/qemu/ChangeLog
+++ b/app-emulation/qemu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.121 2012/10/09 20:40:53 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.122 2012/10/09 20:41:47 cardoe Exp $
+
+  09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  Update maintainer
 
   09 Oct 2012; Doug Goldstein <cardoe@gentoo.org> qemu-9999.ebuild:
   Update the live ebuild to qemu-kvm.
