--- a/net-wireless/kismet-ubertooth/ChangeLog
+++ b/net-wireless/kismet-ubertooth/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/kismet-ubertooth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/kismet-ubertooth/ChangeLog,v 1.9 2012/10/09 18:49:21 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/kismet-ubertooth/ChangeLog,v 1.10 2012/10/09 21:22:12 zerochaos Exp $
+
+  09 Oct 2012; Rick Farina <zerochaos@gentoo.org>
+  kismet-ubertooth-2012.10.1.ebuild, kismet-ubertooth-9999.ebuild:
+  readd arm keyword
 
 *kismet-ubertooth-2012.10.1 (09 Oct 2012)
 
