--- a/net-misc/gwhois/ChangeLog
+++ b/net-misc/gwhois/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/gwhois
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/gwhois/ChangeLog,v 1.55 2012/10/09 18:55:15 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/gwhois/ChangeLog,v 1.56 2012/10/09 21:22:55 jer Exp $
+
+  09 Oct 2012; Jeroen Roovers <jer@gentoo.org> gwhois-20120626.ebuild:
+  Stable for HPPA (bug #433335).
 
   09 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gwhois-20120626.ebuild:
   Stable for amd64, wrt bug #433335
