--- a/media-tv/xbmc/ChangeLog
+++ b/media-tv/xbmc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-tv/xbmc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.149 2012/10/09 04:36:11 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.150 2012/10/09 21:44:28 vapier Exp $
+
+  09 Oct 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
+  Skip running eautoreconf in libapetag & libid3tag #437368 by BT.
 
   09 Oct 2012; Mike Frysinger <vapier@gentoo.org> metadata.xml,
   xbmc-9999.ebuild:
