--- a/www-client/w3mmee/ChangeLog
+++ b/www-client/w3mmee/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/w3mmee
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/w3mmee/ChangeLog,v 1.21 2012/08/26 17:00:59 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/w3mmee/ChangeLog,v 1.22 2012/10/09 22:26:25 naota Exp $
+
+  09 Oct 2012;  <naota@gentoo.org> w3mmee-0.3.2_p24-r6.ebuild,
+  w3mmee-0.3.2_p24-r7.ebuild:
+  inherit multilib.eclass
 
   26 Aug 2012; Raúl Porcel <armin76@gentoo.org> w3mmee-0.3.2_p24-r6.ebuild,
   w3mmee-0.3.2_p24-r7.ebuild:
