--- a/net-im/telepathy-logger/ChangeLog
+++ b/net-im/telepathy-logger/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-im/telepathy-logger
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.41 2012/10/04 14:58:13 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.42 2012/10/09 23:30:05 tetromino Exp $
+
+  09 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  -telepathy-logger-0.2.12.ebuild, telepathy-logger-0.2.12-r1.ebuild,
+  telepathy-logger-0.4.0.ebuild:
+  Use gnome2.eclass to ensure glib schemas get compiled correctly (bug #437750,
+  thanks to Nikoli). Add missing gtk-doc-am and pkgconfig dependencies. Drop
+  useless USE=doc flag for regenerating documentation. Update license. Drop old.
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> telepathy-logger-0.4.0.ebuild:
   Stable for amd64, wrt bug #427544
