--- a/net-im/telepathy-logger/ChangeLog
+++ b/net-im/telepathy-logger/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-im/telepathy-logger
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.42 2012/10/09 23:30:05 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.43 2012/10/09 23:45:42 tetromino Exp $
+
+*telepathy-logger-0.4.0-r1 (09 Oct 2012)
+
+  09 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  telepathy-logger-0.2.12-r1.ebuild, telepathy-logger-0.4.0.ebuild,
+  +telepathy-logger-0.4.0-r1.ebuild:
+  Revert change to postinst behavior in existing ebuild versions. The schema
+  compile fix is now only in 0.4.0-r1.
 
   09 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   -telepathy-logger-0.2.12.ebuild, telepathy-logger-0.2.12-r1.ebuild,
