--- a/media-libs/libkate/ChangeLog
+++ b/media-libs/libkate/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libkate
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkate/ChangeLog,v 1.55 2012/05/29 14:47:48 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkate/ChangeLog,v 1.56 2012/10/10 03:11:40 zerochaos Exp $
+
+  10 Oct 2012; Rick Farina <zerochaos@gentoo.org> libkate-0.3.7.ebuild,
+  libkate-0.3.8.ebuild, libkate-0.4.1.ebuild:
+  python fixes from bug #313533 and ported to all versions, required to build if
+  python 3 is eselected
 
   29 May 2012; Alexis Ballier <aballier@gentoo.org> libkate-0.4.1.ebuild:
   keyword ~amd64-fbsd
@@ -230,4 +235,3 @@
   25 Aug 2008; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
   +libkate-0.1.7.ebuild:
   initial import, ebuild by me
-
