--- a/media-libs/libkate/ChangeLog
+++ b/media-libs/libkate/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libkate
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkate/ChangeLog,v 1.56 2012/10/10 03:11:40 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkate/ChangeLog,v 1.57 2012/10/10 04:01:30 zerochaos Exp $
+
+  10 Oct 2012; Rick Farina <zerochaos@gentoo.org> libkate-0.3.7.ebuild,
+  libkate-0.3.8.ebuild, libkate-0.4.1.ebuild:
+  missed a conditional, thanks to Arfrever for pointing out. minor style fixes
 
   10 Oct 2012; Rick Farina <zerochaos@gentoo.org> libkate-0.3.7.ebuild,
   libkate-0.3.8.ebuild, libkate-0.4.1.ebuild:
