--- a/net-misc/dhcp/ChangeLog
+++ b/net-misc/dhcp/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/dhcp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.218 2012/10/07 06:25:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.219 2012/10/10 04:16:40 vapier Exp $
+
+*dhcp-4.2.4_p2-r1 (10 Oct 2012)
+
+  10 Oct 2012; Mike Frysinger <vapier@gentoo.org> +dhcp-4.2.4_p2-r1.ebuild,
+  +files/dhcp-4.2.4-always-accept-4.patch, +files/dhcp-4.2.4-quieter-ping.patch:
+  Quiet ping output by default #296921 by Martin Mokrejš.  Always accept the -4
+  option even when USE=-ipv6 #437108 by Stefan Reimer.
 
 *dhcp-4.2.4_p2 (07 Oct 2012)
 
