--- a/dev-ruby/ffi/ChangeLog
+++ b/dev-ruby/ffi/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ffi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ffi/ChangeLog,v 1.36 2012/10/10 06:15:13 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ffi/ChangeLog,v 1.37 2012/10/10 06:18:01 graaff Exp $
+
+*ffi-1.1.5 (10 Oct 2012)
+
+  10 Oct 2012; Hans de Graaff <graaff@gentoo.org> +ffi-1.1.5.ebuild:
+  Version bump.
 
   10 Oct 2012; Hans de Graaff <graaff@gentoo.org> -ffi-1.1.0.ebuild,
   -ffi-1.1.3.ebuild:
