--- a/x11-libs/vte/ChangeLog
+++ b/x11-libs/vte/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/vte
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.339 2012/10/10 05:28:08 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/vte/ChangeLog,v 1.340 2012/10/10 07:01:07 ago Exp $
+
+  10 Oct 2012; Agostino Sarubbo <ago@gentoo.org> vte-0.28.2-r204.ebuild:
+  Stable for amd64, wrt bug #427802
 
   10 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> vte-0.28.2-r204.ebuild:
   x86 stable, see bug 427802
