--- a/dev-libs/libevent/ChangeLog
+++ b/dev-libs/libevent/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libevent
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libevent/ChangeLog,v 1.234 2012/08/27 18:48:54 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libevent/ChangeLog,v 1.235 2012/10/10 10:20:07 blueness Exp $
+
+  10 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libevent-2.0.20.ebuild:
+  stable arm ppc ppc64, bug #437766
 
   27 Aug 2012; Jeroen Roovers <jer@gentoo.org> libevent-2.0.20.ebuild,
   libevent-2.1.1.ebuild:
