--- a/app-crypt/ssh-multiadd/ChangeLog
+++ b/app-crypt/ssh-multiadd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/ssh-multiadd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/ssh-multiadd/ChangeLog,v 1.15 2012/08/27 18:00:02 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/ssh-multiadd/ChangeLog,v 1.16 2012/10/10 10:41:15 pinkbyte Exp $
+
+  10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> -ssh-multiadd-1.3.1.ebuild,
+  -files/ssh-multiadd-1.3.1.diff:
+  Drop old revision
 
   27 Aug 2012; Raúl Porcel <armin76@gentoo.org> ssh-multiadd-1.3.1.ebuild,
   ssh-multiadd-1.3.1-r1.ebuild:
