--- a/app-crypt/ssh-multiadd/ChangeLog
+++ b/app-crypt/ssh-multiadd/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/ssh-multiadd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/ssh-multiadd/ChangeLog,v 1.16 2012/10/10 10:41:15 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/ssh-multiadd/ChangeLog,v 1.17 2012/10/10 10:47:38 pinkbyte Exp $
+
+*ssh-multiadd-1.3.2 (10 Oct 2012)
+
+  10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> +ssh-multiadd-1.3.2.ebuild:
+  Version bump
 
   10 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> -ssh-multiadd-1.3.1.ebuild,
   -files/ssh-multiadd-1.3.1.diff:
