--- a/dev-perl/Net-SSLeay/ChangeLog
+++ b/dev-perl/Net-SSLeay/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Net-SSLeay
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.87 2012/10/11 14:22:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.88 2012/10/11 14:26:30 blueness Exp $
+
+  11 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  Net-SSLeay-1.480.0-r1.ebuild:
+  stable ppc64, bug #433249
 
   11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Net-SSLeay-1.480.0-r1.ebuild:
   Stable for amd64, wrt bug #433249
