--- a/www-client/chromium/ChangeLog
+++ b/www-client/chromium/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.732 2012/10/09 18:53:57 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.733 2012/10/11 14:27:00 floppym Exp $
+
+*chromium-22.0.1229.94 (11 Oct 2012)
+
+  11 Oct 2012; Mike Gilbert <floppym@gentoo.org> +chromium-22.0.1229.94.ebuild:
+  Stable channel bump.
 
   09 Oct 2012; Agostino Sarubbo <ago@gentoo.org> chromium-22.0.1229.92.ebuild:
   Stable for amd64, wrt bug #437664
