--- a/app-shells/rrs/ChangeLog
+++ b/app-shells/rrs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/rrs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/rrs/ChangeLog,v 1.19 2012/10/11 09:26:19 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/rrs/ChangeLog,v 1.20 2012/10/11 14:43:47 ago Exp $
+
+  11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> rrs-1.70.ebuild:
+  Stable for amd64, wrt bug #437944
 
   11 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> rrs-1.70.ebuild,
   rrs-1.70-r1.ebuild:
