--- a/dev-libs/nettle/ChangeLog
+++ b/dev-libs/nettle/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/nettle
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nettle/ChangeLog,v 1.66 2012/10/11 11:26:40 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nettle/ChangeLog,v 1.67 2012/10/11 15:01:47 jer Exp $
+
+  11 Oct 2012; Jeroen Roovers <jer@gentoo.org> nettle-2.5.ebuild:
+  Stable for HPPA (bug #433235).
 
   11 Oct 2012; Markus Meier <maekke@gentoo.org> nettle-2.5.ebuild:
   arm stable, bug #433235
