--- a/dev-perl/Net-SSLeay/ChangeLog
+++ b/dev-perl/Net-SSLeay/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Net-SSLeay
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.88 2012/10/11 14:26:30 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.89 2012/10/11 15:07:16 jer Exp $
+
+  11 Oct 2012; Jeroen Roovers <jer@gentoo.org> Net-SSLeay-1.480.0-r1.ebuild:
+  Stable for HPPA (bug #433249).
 
   11 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   Net-SSLeay-1.480.0-r1.ebuild:
