--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7025 2012/10/11 14:13:23 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7026 2012/10/11 15:18:16 flameeyes Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  11 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> package.mask:
+  Mask live ebuild for dev-libs/libg15.
 
   11 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> package.mask:
   Mask newer fragroute
