--- a/dev-libs/libcec/ChangeLog
+++ b/dev-libs/libcec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libcec
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libcec/ChangeLog,v 1.15 2012/10/11 14:44:02 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libcec/ChangeLog,v 1.16 2012/10/11 15:39:04 nativemad Exp $
+
+  11 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> libcec-1.8.1-r1.ebuild:
+  x86 stable, see bug 428958
 
   11 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libcec-1.8.1-r1.ebuild:
   Stable for amd64, wrt bug #428958
