--- a/media-libs/allegro/ChangeLog
+++ b/media-libs/allegro/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/allegro
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/allegro/ChangeLog,v 1.134 2012/10/11 07:27:44 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/allegro/ChangeLog,v 1.135 2012/10/11 15:51:56 mr_bones_ Exp $
+
+  11 Oct 2012; Michael Sterrett <mr_bones_@gentoo.org> -allegro-5.0.5.ebuild,
+  allegro-5.0.7.ebuild:
+  add missing virtual/glu dep (bug #437990)
 
   11 Oct 2012; Anthony G. Basile <blueness@gentoo.org> allegro-5.0.7.ebuild:
   stable ppc, bug #432082
