--- a/app-admin/emacs-updater/ChangeLog
+++ b/app-admin/emacs-updater/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/emacs-updater
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/emacs-updater/ChangeLog,v 1.61 2012/08/07 20:35:56 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/emacs-updater/ChangeLog,v 1.62 2012/10/11 15:56:09 ulm Exp $
+
+*emacs-updater-1.10 (11 Oct 2012)
+
+  11 Oct 2012; Ulrich Müller <ulm@gentoo.org> +emacs-updater-1.10.ebuild:
+  Version bump, fixes bug 436350.
 
   07 Aug 2012; Alexis Ballier <aballier@gentoo.org> emacs-updater-1.9.ebuild:
   keyword ~amd64-fbsd, bug #419199
