--- a/net-misc/freerdp/ChangeLog
+++ b/net-misc/freerdp/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/freerdp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.35 2012/10/07 00:31:10 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.36 2012/10/11 15:59:24 floppym Exp $
+
+*freerdp-1.1.0_pre20121004-r1 (11 Oct 2012)
+
+  11 Oct 2012; Mike Gilbert <floppym@gentoo.org>
+  +files/freerdp-1.1.0_pre20121004-argb.patch,
+  +freerdp-1.1.0_pre20121004-r1.ebuild:
+  Fix white artifacts in remmina, bug 437918 by Ben Kohler.
 
 *freerdp-1.1.0_pre20121004 (07 Oct 2012)
 
